changed the way counts are handled for jsonschemadocuments